@startuml
title EMToken contracts structure
hide footbox

skinparam {
  ActorBorderColor #555555
  ParticipantBorderColor #555555
  BoundaryBorderColor #555555
  ArrowColor #555555
  SequenceLifeLineBorderColor #555555
  SequenceBoxBorderColor #FFFFFF
  NoteBorderColor #555555
  NoteBackgroundColor #DDDDDD
}

class EMoneyToken {
}

class ERC20 {
}

class Holdable {
}

class Overdraftable {
}

class Clearable {
}

class Fundable {
}

class Payoutable {
}

class Compliant {
}

class Whitelistable {
}

class RoleControl {
}

class ConsolidatedLedger {
}

class ERC20Ledger {
}

class HoldsLedger {
}

class OverdraftsLedger {
}

class EternalStorageWrapper {
}

class EternalStorage {
}

EMoneyToken <|-- ERC20
EMoneyToken <|-- Holdable
EMoneyToken <|-- Overdraftable
EMoneyToken <|-- Clearable
EMoneyToken <|-- Fundable
EMoneyToken <|-- Payoutable

ERC20 <|-- Compliant
Holdable <|-- Compliant
Overdraftable <|-- Compliant
Clearable <|-- Compliant
Fundable <|-- Compliant
Payoutable <|-- Compliant

Compliant <|-- Whitelistable

Whitelistable <|-- RoleControl

Compliant <|-- ConsolidatedLedger

ConsolidatedLedger <|-- ERC20Ledger
ConsolidatedLedger <|-- HoldsLedger
ConsolidatedLedger <|-- OverdraftsLedger


ERC20Ledger <|-- EternalStorageWrapper
HoldsLedger <|-- EternalStorageWrapper
OverdraftsLedger <|-- EternalStorageWrapper
RoleControl <|-- EternalStorageWrapper

EternalStorageWrapper ..|> EternalStorage

@enduml